# ctx

./: .gitignore  Cargo.toml  LICENSE  README.md
.agents/plans/: app-recovery.md  ctx-canary.md  desktop-placement.md  next-iteration.md  tauri-ui.md  workspace-urls.md
.github/workflows/: release.yml
apps/ctx-ui/: index.html  package-lock.json  package.json  vite.config.ts
apps/ctx-ui/src/: App.test.tsx  App.tsx  ContextEditor.tsx  ContextSheets.tsx  SettingsSheet.test.tsx  SettingsSheet.tsx  WindowPicker.test.tsx  WindowPicker.tsx  api.ts  dialogFocus.ts  main.tsx  releaseConfig.test.ts  styles.css  styles.test.ts  types.ts  updater.test.ts  updater.ts  useAppearancePreferences.ts
apps/ctx-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/ctx-ui/src-tauri/capabilities/: default.json
apps/ctx-ui/src-tauri/icons/: icon.icns
apps/ctx-ui/src-tauri/src/: main.rs
apps/ctx-ui/src/components/: AppBanners.tsx  UpdateSettingsSection.tsx  WorkspaceCard.tsx
apps/ctx-ui/src/hooks/: useAppearancePreferences.test.ts  useAppearancePreferences.ts  useUpdateManager.ts  useWorkspaceController.ts
apps/ctx-ui/src/sheets/: ContextEditor.tsx  ContextSheets.tsx  SettingsSheet.test.tsx  SettingsSheet.tsx  WindowPicker.test.tsx  WindowPicker.tsx
apps/ctx-ui/src/test/: setup.ts
crates/ctx-cli/: Cargo.toml
crates/ctx-cli/src/: cli.rs  error.rs  main.rs
crates/ctx-core/: Cargo.toml
crates/ctx-core/src/: accessibility.rs  application.rs  config.rs  lib.rs  mutation_lock.rs  paths.rs  persistence.rs  recovery.rs  runtime.rs  snapshot.rs  spaces.rs  switcher.rs  urls.rs  windows.rs
crates/ctx-core/src/recovery/: browser.rs  editor.rs  terminal.rs
