[package]
name = "ctx-core"
version = "0.1.1"
edition = "2024"

[dependencies]
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility = "0.2.0"
accessibility-sys = "0.2.0"
core-foundation = "0.10.1"
core-graphics = "0.25.0"
