[package]
name = "ctx-tauri"
version = "1.0.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
ctx-core = { version = "1.0.0", path = "../../../crates/ctx-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.5", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
